Finished Gatsby Toturial Part 3

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -4,6 +4,14 @@
   font-family: sans-serif;
 }
 
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
+}
+
 .heading {
   color: rebeccapurple;
 }
